implemented register api and improved ui of login and register pages

--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stock Over Flow</title>
     <script>
-      window.onload = function() {
+      window.onload = function () {
         if (localStorage.getItem('stockoverflow')) {
           window.location.href = 'pages/dashboard.html';
         } else {
@@ -13,7 +13,6 @@
         }
       };
     </script>
-</head>
-<body>
-</body>
+  </head>
+  <body></body>
 </html>
