--- a/client/pages/dashboard.html
+++ b/client/pages/dashboard.html
@@ -1,21 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Dashboard - Inventory Management</title>
-  <link rel="stylesheet" href="../styles/main.css">
-  <script defer src="../scripts/dashboard.js"></script>
-</head>
-<body>
-  <h1>Dashboard</h1>
-  <nav>
-    <a href="inventory.html">Inventory</a> |
-    <a href="users.html">Users</a> |
-    <a href="settings.html">Settings</a> |
-    <a href="login.html" id="logout-link">Logout</a>
-  </nav>
-  <div id="dashboard-content">
-    <p>Welcome to the Inventory Management Dashboard!</p>
-  </div>
-</body>
-</html> 
+  <head>
+    <meta charset="UTF-8" />
+    <title>Dashboard - SOF</title>
+    <link rel="stylesheet" href="../styles/main.css" />
+    <style></style>
+    <script defer src="../scripts/api.js"></script>
+  </head>
+  <body>
+    <nav>
+      <span
+        style="
+          font-weight: bold;
+          font-size: 1.3rem;
+          color: #fff;
+          margin-right: 2rem;
+          letter-spacing: 1px;
+        "
+        >StockOverFlow</span
+      >
+      <a href="dashboard.html">Dashboard</a>
+    </nav>
+    <h1>Dashboard</h1>
+    <div id="dashboard-content">
+      <p>Welcome to the Inventory Management Dashboard!</p>
+    </div>
+  </body>
+</html>
