--- a/client/pages/dashboard.html
+++ b/client/pages/dashboard.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../styles/main.css" />
     <style></style>
     <script defer src="../scripts/api.js"></script>
+    <script defer src="../scripts/common.js"></script>
   </head>
   <body>
     <nav>
