--- a/client/pages/login.html
+++ b/client/pages/login.html
@@ -193,6 +193,7 @@
       }
     </style>
     <script defer src="../scripts/api.js"></script>
+    <script defer src="../scripts/common.js"></script>
   </head>
   <body>
     <nav class="navbar">
