--- a/client/pages/register.html
+++ b/client/pages/register.html
@@ -217,6 +217,7 @@
       }
     </style>
     <script defer src="../scripts/api.js"></script>
+    <script defer src="../scripts/common.js"></script>
   </head>
   <body>
     <nav class="navbar">
@@ -229,7 +230,7 @@
         <a href="login.html">Login</a>
       </div>
       <div class="navbar-user" id="navbar-user" style="display: none">
-        <img src="../assets/user-icon.png" alt="User" />
+        <img src="../assets/logo.png" alt="User" />
       </div>
     </nav>
     <div class="register-container">
@@ -296,9 +297,6 @@
           </div>
         </form>
       </div>
-    </div>
-    <div id="toast" style="display:none;position:fixed;top:32px;right:32px;z-index:9999;background:#ffb22c;color:#854836;padding:1.1rem 2.2rem;border-radius:8px;font-weight:600;box-shadow:0 2px 12px rgba(133,72,54,0.15);font-size:1.1rem;transition:opacity 0.3s;">
-      Toast
     </div>
     <script>
       if (localStorage.getItem('userLoggedIn')) {
@@ -458,7 +456,10 @@
           const passwordRegex =
             /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[!@#$%^&*()_+\-=[\]{};':"\\|,.<>/?]).{8,}$/;
           if (!passwordRegex.test(password)) {
-            showToast('Password must be at least 8 characters and include uppercase, lowercase, number, and special character.', 'error');
+            showToast(
+              'Password must be at least 8 characters and include uppercase, lowercase, number, and special character.',
+              'error'
+            );
             return;
           }
           if (password !== confirm_password) {
@@ -475,30 +476,18 @@
             password,
             confirm_password,
           });
-          if (result.status === 201) {
+          if (result.status == 201) {
             showToast('Registration successful! Please log in.');
             setTimeout(() => {
               window.location.href = 'login.html';
             }, 1800);
           } else {
-            showToast('Registration failed: ' + (result.message || 'Error'), 'error');
+            showToast(
+              'Registration failed: ' + (result.message || 'Error'),
+              'error'
+            );
           }
         });
-
-      function showToast(message, type = 'success') {
-        const toast = document.getElementById('toast');
-        toast.textContent = message;
-        toast.style.background = type === 'error' ? '#d32f2f' : '#ffb22c';
-        toast.style.color = type === 'error' ? '#fff' : '#854836';
-        toast.style.display = 'block';
-        toast.style.opacity = '1';
-        setTimeout(() => {
-          toast.style.opacity = '0';
-          setTimeout(() => {
-            toast.style.display = 'none';
-          }, 400);
-        }, 1800);
-      }
     </script>
   </body>
 </html>
