--- a/client/pages/register.html
+++ b/client/pages/register.html
@@ -5,12 +5,6 @@
     <title>Register - SOF</title>
     <link rel="stylesheet" href="../styles/main.css" />
     <style>
-      body {
-        background: linear-gradient(120deg, #ffb22c 0%, #854836 100%);
-        min-height: 100vh;
-        margin: 0;
-      }
-
       .register-container {
         display: flex;
         align-items: center;
@@ -24,7 +18,7 @@
         padding: 2rem 2.5rem 1.5rem 2.5rem;
         min-width: 350px;
         max-width: 530px;
-        margin: 0 auto;
+        margin: 2rem auto;
         display: flex;
         flex-direction: column;
         align-items: center;
