categories related updates

--- a/client/pages/register.html
+++ b/client/pages/register.html
@@ -160,7 +160,7 @@
         <form id="register-form" class="register-form">
           <div class="form-row">
             <label
-              >Name:
+              >Inventory Name:
               <input type="text" name="name" required />
             </label>
             <label
